testsuite/gsksl/errors/duplicate-function-parameter.glsl
void
foo (int x, int x)
{
}

void
main ()
{
  foo (4, 2);
}
